@@ -47,8 +47,6 @@ import java.util.stream.Collectors;
 import java.util.zip.ZipFile;
 
 import org.apache.maven.artifact.Artifact;
-import org.apache.maven.artifact.DefaultArtifact;
-import org.apache.maven.artifact.handler.ArtifactHandler;
 import org.apache.maven.artifact.resolver.filter.ArtifactFilter;
 import org.apache.maven.artifact.resolver.filter.ScopeArtifactFilter;
 import org.apache.maven.artifact.versioning.ArtifactVersion;
@@ -753,6 +751,8 @@ public abstract class AbstractSurefireMojo extends AbstractMojo implements Suref
 
     private Logger logger = LoggerFactory.getLogger(getClass());
 
+    private final PluginConsoleLogger consoleLogger = new PluginConsoleLogger(logger);
+
     /**
      * (TestNG only) Define the factory class used to create all test instances.
      *
@@ -937,8 +937,6 @@ public abstract class AbstractSurefireMojo extends AbstractMojo implements Suref
 
     private List<CommandLineOption> cli;
 
-    private volatile PluginConsoleLogger consoleLogger;
-
     @Override
     public void execute() throws MojoExecutionException, MojoFailureException {
         if (isSkipExecution()) {
@@ -990,13 +988,6 @@ public abstract class AbstractSurefireMojo extends AbstractMojo implements Suref
 
     @Nonnull
     protected final PluginConsoleLogger getConsoleLogger() {
-        if (consoleLogger == null) {
-            synchronized (this) {
-                if (consoleLogger == null) {
-                    consoleLogger = new PluginConsoleLogger(logger);
-                }
-            }
-        }
         return consoleLogger;
     }
 
@@ -1128,6 +1119,10 @@ public abstract class AbstractSurefireMojo extends AbstractMojo implements Suref
 
     private void executeAfterPreconditionsChecked(@Nonnull DefaultScanResult scanResult, @Nonnull Platform platform)
             throws MojoExecutionException, MojoFailureException {
+        // TODO check if those 2 methods can be called here
+        convertJunitEngineParameters();
+        convertGroupParameters();
+
         TestClassPath testClasspath = generateTestClasspath();
         List<ProviderInfo> providers = createProviders(testClasspath);
         ResolvePathResultWrapper wrapper =
@@ -1162,17 +1157,31 @@ public abstract class AbstractSurefireMojo extends AbstractMojo implements Suref
                         getJUnit5Artifact(),
                         testClasspath,
                         getJunitArtifact(),
-                        junitDepArtifact),
+                        junitDepArtifact,
+                        getBooterArtifact(),
+                        surefireDependencyResolver,
+                        session,
+                        project,
+                        pluginDescriptor,
+                        pluginArtifactMap,
+                        consoleLogger),
                 new TestNgProviderInfo(getTestNgArtifact()),
                 new JUnitCoreProviderInfo(getJunitArtifact(), junitDepArtifact),
                 new JUnit4ProviderInfo(getJunitArtifact(), junitDepArtifact),
                 new JUnit3ProviderInfo(),
-                new JUnitPlatformProviderShadefireInfo(
+                new JUnitPlatformProviderInfo.JUnitPlatformProviderShadefireInfo(
                         getJUnitPlatformRunnerArtifact(),
                         getJUnit5Artifact(),
                         testClasspath,
                         getJunitArtifact(),
-                        junitDepArtifact));
+                        junitDepArtifact,
+                        getBooterArtifact(),
+                        surefireDependencyResolver,
+                        session,
+                        project,
+                        pluginDescriptor,
+                        pluginArtifactMap,
+                        consoleLogger));
     }
 
     SurefireProperties setupProperties() {
@@ -3059,239 +3068,6 @@ public abstract class AbstractSurefireMojo extends AbstractMojo implements Suref
             String version = getBooterArtifact().getBaseVersion();
             return surefireDependencyResolver.getProviderClasspath(
                     session.getRepositorySession(), project.getRemotePluginRepositories(), "surefire-junit4", version);
-        }
-    }
-
-    private enum Engine {
-        JUNIT3,
-        JUNIT4,
-        JUNIT47,
-        TESTNG,
-        JUNIT_PLATFORM
-    }
-
-    class JUnitPlatformProviderInfo implements ProviderInfo {
-        private static final String PROVIDER_DEP_GID = "org.junit.platform";
-        private static final String PROVIDER_DEP_AID = "junit-platform-launcher";
-
-        private final Artifact junitPlatformRunnerArtifact;
-        private final Artifact junitPlatformArtifact;
-        private final TestClassPath testClasspath;
-
-        private final Artifact junitArtifact;
-        private final Artifact junitDepArtifact;
-
-        private Engine engine = Engine.JUNIT_PLATFORM;
-
-        JUnitPlatformProviderInfo(
-                Artifact junitPlatformRunnerArtifact,
-                Artifact junitPlatformArtifact,
-                @Nonnull TestClassPath testClasspath,
-                Artifact junitArtifact,
-                Artifact junitDepArtifact) {
-            this.junitPlatformRunnerArtifact = junitPlatformRunnerArtifact;
-            this.junitPlatformArtifact = junitPlatformArtifact;
-            this.testClasspath = testClasspath;
-            this.junitArtifact = junitArtifact;
-            this.junitDepArtifact = junitDepArtifact;
-            if (junitDepArtifact != null || isAnyJunit4(junitArtifact)) {
-                this.engine = Engine.JUNIT47;
-            }
-        }
-
-        @Override
-        @Nonnull
-        public String getProviderName() {
-            return "org.apache.maven.surefire.junitplatform.JUnitPlatformProvider";
-        }
-
-        protected String getProviderArtifactName() {
-            return "surefire-junit-platform";
-        }
-
-        @Override
-        public boolean isApplicable() {
-            return (junitPlatformRunnerArtifact == null && junitPlatformArtifact != null)
-                    || (junitDepArtifact != null || isAnyJunit4(junitArtifact));
-        }
-
-        @Override
-        public void addProviderProperties() {
-            convertGroupParameters();
-            convertJunitEngineParameters();
-        }
-
-        @Nonnull
-        @Override
-        public List<String[]> getJpmsArguments(@Nonnull ProviderRequirements forkRequirements) {
-            boolean hasTestDescriptor = forkRequirements.isModularPath() && forkRequirements.hasTestModuleDescriptor();
-            return hasTestDescriptor ? getJpmsArgs() : Collections.emptyList();
-        }
-
-        @Override
-        @Nonnull
-        public Set<Artifact> getProviderClasspath() throws MojoExecutionException {
-            String surefireVersion = getBooterArtifact().getBaseVersion();
-            Map<String, Artifact> providerArtifacts = surefireDependencyResolver.getProviderClasspathAsMap(
-                    session.getRepositorySession(),
-                    project.getRemotePluginRepositories(),
-                    getProviderArtifactName(),
-                    surefireVersion);
-            Map<String, Artifact> testDeps = testClasspath.getTestDependencies();
-
-            Plugin plugin = getPluginDescriptor().getPlugin();
-            Map<String, Artifact> pluginDeps = surefireDependencyResolver.resolvePluginDependencies(
-                    session.getRepositorySession(),
-                    project.getRemotePluginRepositories(),
-                    plugin,
-                    getPluginArtifactMap());
-
-            if (hasDependencyPlatformEngine(pluginDeps)) {
-                providerArtifacts.putAll(pluginDeps);
-            } else {
-                String engineVersion = null;
-                if (hasDependencyJupiterAPI(testDeps)
-                        && !testDeps.containsKey("org.junit.jupiter:junit-jupiter-engine")) {
-                    String engineGroupId = "org.junit.jupiter";
-                    String engineArtifactId = "junit-jupiter-engine";
-                    String engineCoordinates = engineGroupId + ":" + engineArtifactId;
-                    String api = "org.junit.jupiter:junit-jupiter-api";
-                    engineVersion = testDeps.get(api).getBaseVersion();
-                    getConsoleLogger()
-                            .debug("Test dependencies contain " + api + ". Resolving " + engineCoordinates + ":"
-                                    + engineVersion);
-                    addEngineByApi(engineGroupId, engineArtifactId, engineVersion, providerArtifacts);
-                }
-
-                if ((testDeps.containsKey("junit:junit") || testDeps.containsKey("junit:junit-dep"))
-                        && !testDeps.containsKey("org.junit.vintage:junit-vintage-engine")) {
-                    String engineGroupId = "org.junit.vintage";
-                    String engineArtifactId = "junit-vintage-engine";
-                    String engineCoordinates = engineGroupId + ":" + engineArtifactId;
-
-                    if (engineVersion != null) {
-                        getConsoleLogger()
-                                .debug("Test dependencies contain JUnit4. Resolving " + engineCoordinates + ":"
-                                        + engineVersion);
-                        addEngineByApi(engineGroupId, engineArtifactId, engineVersion, providerArtifacts);
-                    } else {
-                        addEngineByApi(engineGroupId, engineArtifactId, "5.12.1", providerArtifacts);
-                    }
-                }
-            }
-
-            narrowDependencies(providerArtifacts, testDeps);
-            alignProviderVersions(providerArtifacts);
-
-            return new LinkedHashSet<>(providerArtifacts.values());
-        }
-
-        private List<String[]> getJpmsArgs() {
-            List<String[]> args = new ArrayList<>();
-
-            args.add(new String[] {
-                "--add-opens", "org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED"
-            });
-
-            args.add(new String[] {
-                "--add-opens", "org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED"
-            });
-
-            return args;
-        }
-
-        private void addEngineByApi(
-                String engineGroupId,
-                String engineArtifactId,
-                String engineVersion,
-                Map<String, Artifact> providerArtifacts)
-                throws MojoExecutionException {
-            for (Artifact dep : resolve(engineGroupId, engineArtifactId, engineVersion, null, "jar")) {
-                String key = dep.getGroupId() + ":" + dep.getArtifactId();
-                providerArtifacts.put(key, dep);
-            }
-        }
-
-        private void narrowDependencies(
-                Map<String, Artifact> providerArtifacts, Map<String, Artifact> testDependencies) {
-            providerArtifacts.keySet().removeAll(testDependencies.keySet());
-        }
-
-        protected void alignProviderVersions(Map<String, Artifact> providerArtifacts) throws MojoExecutionException {
-            if (junitPlatformArtifact == null) {
-                return;
-            }
-            String version = junitPlatformArtifact.getBaseVersion();
-            for (Artifact launcherArtifact : resolve(PROVIDER_DEP_GID, PROVIDER_DEP_AID, version, null, "jar")) {
-                String key = launcherArtifact.getGroupId() + ":" + launcherArtifact.getArtifactId();
-                if (providerArtifacts.containsKey(key)) {
-                    providerArtifacts.put(key, launcherArtifact);
-                }
-            }
-        }
-
-        private Set<Artifact> resolve(String g, String a, String v, String c, String t) throws MojoExecutionException {
-            // FIXME will be different with 3 and testng
-            ArtifactHandler handler = junitPlatformArtifact != null
-                    ? junitPlatformArtifact.getArtifactHandler()
-                    : junitArtifact.getArtifactHandler();
-            Artifact artifact = new DefaultArtifact(g, a, v, null, t, c, handler);
-            getConsoleLogger().debug("Resolving artifact " + g + ":" + a + ":" + v);
-            Set<Artifact> r = surefireDependencyResolver.resolveArtifacts(
-                    session.getRepositorySession(), project.getRemoteProjectRepositories(), artifact);
-            getConsoleLogger().debug("Resolved artifact " + g + ":" + a + ":" + v + " to " + r);
-            return r;
-        }
-
-        private boolean hasDependencyJupiterAPI(Map<String, Artifact> dependencies) {
-            return dependencies.containsKey("org.junit.jupiter:junit-jupiter-api");
-        }
-
-        private boolean hasDependencyPlatformEngine(Map<String, Artifact> dependencies) {
-            for (Entry<String, Artifact> dependency : dependencies.entrySet()) {
-                if (dependency.getKey().equals("org.junit.platform:junit-platform-engine")) {
-                    return true;
-                }
-            }
-
-            return false;
-        }
-    }
-
-    final class JUnitPlatformProviderShadefireInfo extends JUnitPlatformProviderInfo {
-
-        JUnitPlatformProviderShadefireInfo(
-                Artifact junitPlatformRunnerArtifact,
-                Artifact junitPlatformArtifact,
-                @Nonnull TestClassPath testClasspath,
-                Artifact junitArtifact,
-                Artifact junitDepArtifact) {
-            super(junitPlatformRunnerArtifact, junitPlatformArtifact, testClasspath, junitArtifact, junitDepArtifact);
-        }
-
-        @Override
-        public boolean isApplicable() {
-            // newer discover this provider automatically
-            return false;
-        }
-
-        @Override
-        @Nonnull
-        public String getProviderName() {
-            return "org.apache.maven.shadefire.surefire.junitplatform.JUnitPlatformProvider";
-        }
-
-        @Override
-        protected String getProviderArtifactName() {
-            return "surefire-shadefire";
-        }
-
-        @Override
-        protected void alignProviderVersions(Map<String, Artifact> providerArtifacts) throws MojoExecutionException {
-            // shadefire is used as booter we can not provide additional dependencies,
-            // so we need add a launcher here
-            providerArtifacts.put("org.junit.platform:junit-platform-launcher", null);
-            super.alignProviderVersions(providerArtifacts);
         }
     }
 
